--- a/lib/cenatus_ltd_web/templates/shared/article_preview.html.heex
+++ b/lib/cenatus_ltd_web/templates/shared/article_preview.html.heex
@@ -1,4 +1,4 @@
-<div class="col-md-6">
+<div class="col-md-4">
   <%#
   <div class="overlay" id='article-#{article.id}'>
     <a href='#{Routes.article_path(@conn, :show, article)}'>view article</a>
@@ -10,12 +10,7 @@
       <a href={Routes.article_path(@conn, :show, @article)}>
         <img data-src={@article.image_url} class='cld-responsive' />
       </a>
-      <h4 class="lp">
-        <a href={Routes.article_path(@conn, :show, @article)}>
-          <%= @article.title %>
-        </a>
-      </h4>
-      <div class="summary lp">
+      <div class="summary mt-2 small">
         <%= @article.summary |> as_html %>
       </div>
     </article>
