--- a/lib/cenatus_ltd_web/templates/layout/_head.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_head.html.heex
@@ -12,9 +12,11 @@
   <meta name="google-site-verification" content="TY-DmtIL7_4UM5nAjoOUFUjKXl6w_IAWlijEhvyxQ0Y" />
   <meta name="specificfeeds-verification-code" content="s8YYMqgHmpfPBKVlHTsC" />
 
-  <title>Cenatus</title>
+  <title>matt spendlove</title>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&amp;display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
   <link phx-track-static rel="stylesheet" href={ Routes.static_path(@conn, "/assets/from_scss.css")} />
