--- a/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
+++ b/lib/cenatus_ltd_web/templates/layout/_navbar.html.heex
@@ -15,7 +15,7 @@
           <header class="w-100">
             <button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             <a href="/">
-              <h3 class="offcanvas-title text-center w-100 mb-4" id="offcanvasNavbarLabel">Cenatus</h3>
+              <h4 class="offcanvas-title text-center w-100 mb-4" id="offcanvasNavbarLabel">matt spendlove</h4>
             </a>
 
           </header>
@@ -23,7 +23,7 @@
         <div class="offcanvas-body">
 
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mb-4 mb-lg-0">
-            <%= for menu_item <- [:creative, :technology, :production] do %>
+            <%= for menu_item <- [] do %>
               <li class="nav-item cl-effect-1 text-nowrap me-lg-5 py-2 py-lg-0">
                   <a href={"/#{menu_item}"}
                     aria-current={CenatusLtdWeb.NavView.is_active?(:aria, @conn, menu_item)}
@@ -40,22 +40,6 @@
                 <ul class="w-100">
                   <li>
                     <a href="/about" class="fs-5">about</a>
-                  </li>
-                  <li class="fs-5"> | </li>
-                  <li>
-                    <a href={Routes.blog_path(@conn, :index)} class="fs-5">blog</a>
-                  </li>
-                  <li class="fs-5"> | </li>
-                  <li>
-                    <a href="https://www.specificfeeds.com/cenatus" class="fs-5">rss</a>
-                  </li>
-                  <li class="fs-5"> | </li>
-                  <li>
-                    <a href="https://www.specificfeeds.com/cenatus?subParam=followPub" class="fs-5">subs</a>
-                  </li>
-                  <li class="fs-5"> | </li>
-                  <li>
-                    <a href="/contact" class="fs-5">contact</a>
                   </li>
                   <%#
                   <li> | </li>
