--- a/lib/cenatus_ltd_web/templates/article/show.html.heex
+++ b/lib/cenatus_ltd_web/templates/article/show.html.heex
@@ -7,7 +7,7 @@
 
   <%= render CenatusLtdWeb.SharedView, "related.html",
         related: @related,
-        title: "related articles",
+        title: "related work",
         article_type: :article,
         conn: @conn
   %>
