--- a/lib/cenatus_ltd_web/templates/page/about.html.heex
+++ b/lib/cenatus_ltd_web/templates/page/about.html.heex
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <article class="show">
       <div class="content tp vh-100">
-        <span class="font-weight-bold">Matt Spendlove, (b. 1976, UK)</span>
+        <span class="fw-bolder">Matt Spendlove, (b. 1976, UK)</span>
         <br/>
         <br/>
         <br/>
@@ -22,6 +22,9 @@
         <br/>
 
         e: <a href="mailto:matt.spendlove@gmail.com">matt.spendlove@gmail.com</a>
+
+        <br />
+        <br />
       </div>
     </article>
   </div>
