--- a/lib/cenatus_ltd_web/templates/page/contact.html.heex
+++ b/lib/cenatus_ltd_web/templates/page/contact.html.heex
@@ -1,7 +1,17 @@
 <div class="row">
   <div class="col-md-12">
     <div class="map-responsive">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2481.971885199102!2d-0.0610791!3d51.5320755!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761cc34a7b9507%3A0xd2248c1bab0959a!2sApiary+Studios!5e0!3m2!1sen!2suk!4v1496607821288" width="1600" height="1066" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d620.3347220523882!2d-0.0261512!3d51.5436846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761d1303a11e93%3A0xd915c13403a1308c!2sLion%20Works%2F%20Liquid%20Studios!5e0!3m2!1sen!2suk!4v1716474420916!5m2!1sen!2suk"
+        width="1600"
+        height="1066"
+        frameborder="0"
+        style="border:0"
+        allowfullscreen
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      >
+      </iframe>
     </div>
   </div>
 </div>
@@ -9,18 +19,12 @@
 <div class="row">
   <div class="col-md-12">
     <article class="show">
-      <div class="content tp lp">
-        The Cenatus office is located at
-        <a href="http://apiarystudios.org/">The Apiary</a>
-        an independent photo studio and creative production space situated in London’s East End.
-        <br/>
-        <br/>
-        Drop us a mail at:
-        <a href="mailto:info@cenatus.org">info@cenatus.org</a>
+      <div class="content tp">
+        The Cenatus office is located at Lion Works, Hackney Wick in London's East End. <br />
+        <br /> Drop us a mail at: <a href="mailto:info@cenatus.org">info@cenatus.org</a>
         or subscribe to sites updates &amp; blog entries via
         <a href="https://www.specificfeeds.com/cenatus">rss</a>
-        or
-        <a href="https://www.specificfeeds.com/cenatus?subParam=followPub">email.</a>
+        or <a href="https://www.specificfeeds.com/cenatus?subParam=followPub">email.</a>
       </div>
     </article>
   </div>
