--- a/lib/cenatus_ltd_web/templates/shared/address.html.heex
+++ b/lib/cenatus_ltd_web/templates/shared/address.html.heex
@@ -1,11 +1,8 @@
-<a href="https://www.google.co.uk/maps/place/Apiary+Studios/@51.5320755,-0.0610791,17z/data=!4m12!1m6!3m5!1s0x48761cc34a7b9507:0xd2248c1bab0959a!2sApiary+Studios!8m2!3d51.5320755!4d-0.0588904!3m4!1s0x48761cc34a7b9507:0xd2248c1bab0959a!8m2!3d51.5320755!4d-0.0588904" target="_blank">
+<a
+  href="https://www.google.co.uk/maps/place/Lion+Works%2F+Liquid+Studios/@51.5436854,-0.0267949,19z/data=!3m1!4b1!4m6!3m5!1s0x48761d1303a11e93:0xd915c13403a1308c!8m2!3d51.5436846!4d-0.0261512!16s%2Fg%2F1pp2vd56g?entry=ttu"
+  target="_blank"
+>
   <address>
-    cenatus ltd
-    <br/>
-    458 hackney road
-    <br/>
-    london
-    <br/>
-    e2 9eg
+    cenatus ltd <br /> q3, 55 wallis rd <br /> london <br /> e9 5lh
   </address>
 </a>
