--- a/lib/cenatus_ltd_web/templates/page/about.html.heex
+++ b/lib/cenatus_ltd_web/templates/page/about.html.heex
@@ -9,7 +9,7 @@
         <br/>
 
         <p>
-        Matt Spendlove is an artist from London who creates immersive installations, audiovisual performances and sonic artefacts. Across these situations he explores spatial ambiguity, structural form, waveform materiality and the illusory contours of psychophysics.
+        Matt Spendlove is an artist from London who creates immersive installations, audiovisual performances and <a href="http://spatial.infrasonics.net" target="_blank">sonic artefacts</a>. Across these situations he explores spatial ambiguity, structural form, waveform materiality and the illusory contours of psychophysics.
         </p>
         <p>
         His work channels the dynamics of sound system culture by incorporating low frequency vibration alongside hacked code and optisonic experiments. He combines a preoccupation with emergent behaviour, rule based repetition and chaotic systems to generate enlivened visual stimuli and shape dubbed out, cracked and reductive sonics into audible geometric form. Through textured intricate production, his shows bring corporeal presence carved out with a minimalist’s scalpel.
