--- a/lib/cenatus_ltd_web/templates/shared/tracks.html.heex
+++ b/lib/cenatus_ltd_web/templates/shared/tracks.html.heex
@@ -13,7 +13,7 @@
         </span>
 
       </li>
-    <%= end %>
+    <% end %>
   </ul>
 <% else %>
   <p> Last FM tracks not loading right now :( </p>
