--- a/lib/cenatus_ltd_web/templates/shared/tweets.html.heex
+++ b/lib/cenatus_ltd_web/templates/shared/tweets.html.heex
@@ -9,7 +9,7 @@
           <span class="glyphicon glyphicon-new-window"></span>
         </a>
       </li>
-    <%= end %>
+    <% end %>
   </ul>
 <% else %>
   <p> Tweets not loading right now :( </p>
